# DuckLynx

./: .gitignore  COPYING  README.md
DuckUpdate/: CMakeLists.txt  README.md
DuckUpdate/src/: main.c
firmware/: CMakeLists.txt  README.md
firmware/src/rhsp/: rhsp.c  rhsp.h  rhspUART.c
firmware_updater/: CMakeLists.txt
firmware_updater/src/: main.c
info/: Android Board.md  HIB.md  RHSP.md  Stock Firmware.md
